2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* loader.h: Include <stdint.h> and <stdbool.h>.  Don't include
	<l4/types.h>, "cap.h", or "as.h".
	(struct activity): Remove forward.
	(struct thread): Remove forward.
	(loader_allocate_object_callback_t): New definition.
	(loader_lookup_object_callback_t): New definition.
	(loader_elf_load): Change prototype to take an allocation, a
	lookup, a start, an end, and an entry arguments.  Return a
	boolean.
	* loader.c: Don't include "cap.h", "object.h", "as.h" or
	"thread.h".  Include <l4.h>.
	(loader_elf_load): Change prototype to take an
	allocation, a lookup, a start, an end, and an entry arguments.
	Return a boolean.  Don't panic on an error.  Instead, print some
	debugging output and return false.  On success, return true.
	Update to use alloc and lookup callback functions.
	* elf.h: Move here from ../viengoos.
	* Makefile.am (common_sources): Add elf.h, loader.h and loader.c.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (finish): Only copy what comes after the last '/'
	into program_name.
	* Makefile.am (routines): Add strrchr.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (ARCH_SOURCES): Rename from this...
	(ARCH_COMMON_SOURCES): ... to this.
	(ARCH_USER_SOURCES): New variable.
	(ARCH_KERNEL_SOURCES): Likewise.
	(noinst_LIBRARIES): Add libc-kernel.a.
	(common_sources): New variable.
	(libc_parts_a_SOURCES): Move most files to common_sources.  Add
	$(ARCH_COMMON_SOURCES), $(ARCH_USER_SOURCES)
	(libc_parts_a_CPPFLAGS): Add -I$(LIBC)/include.
	(libc_kernel_a_SOURCES): New variable.
	(libc_kernel_a_CPPFLAGS): Likewise.
	(libc_kernel_a_LIBADD): Likewise.
	* s_printf.c: Move from ../ruth/output.c.
	(s_putchar) [RM_INTERN || _L4_TEST_ENVIRONMENT]: Add appropriate
	implementation.
	* _exit.c: New file.
	* getpagesize.c: Likewise.
	* ia32-cmain.c: Copied from ../ruth/ia32-cmain.c.  Removed dead
	code.  Don't include "ruth.h".  Add prototype for main.
	(program_name): New variable.